fix: restore JWT blacklist security, enforce DATABASE_TYPE, fix TNM dir probe
- Re-enable BLACKLIST_AFTER_ROTATION and add token_blacklist to INSTALLED_APPS
  in base.py so rotated refresh tokens are properly invalidated
- Add explicit DATABASE_TYPE=postgresql to docker-compose backend environment
  so Django never silently falls back to SQLite when the .env is incomplete
- Change contributor TNM dir probe from idToUser.json to AssignmentMatrix.json
  to match the file actually required by analyze_assignment_matrix

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -23,6 +23,7 @@ services:
     restart: unless-stopped
     env_file: ./backend/.env
     environment:
+      DATABASE_TYPE: postgresql
       TNM_JAR_PATH: /app/tnm-cli.jar
     ports:
       - "8000:8000"
