fix: add POSTGRES_HOST and explicit DB credentials to backend service
Without POSTGRES_HOST=db Django defaults to localhost, which cannot reach the
PostgreSQL container. Also pin POSTGRES_DB/USER/PASSWORD explicitly so the
connection config is self-contained and not dependent on .env file values.

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -24,6 +24,11 @@ services:
     env_file: ./backend/.env
     environment:
       DATABASE_TYPE: postgresql
+      POSTGRES_HOST: db
+      POSTGRES_PORT: "5432"
+      POSTGRES_DB: secuflow
+      POSTGRES_USER: secuflow
+      POSTGRES_PASSWORD: secuflow_dev
       TNM_JAR_PATH: /app/tnm-cli.jar
     ports:
       - "8000:8000"
